welcome.lessons.welcome.array.maxvalue.MaxValue.scala.error
maxValue:7: error: not found: value m
			m=nums(i)
                        ^